# M4N_DISTRO

./: .gitignore  README.md
distributed_computing/distributed_compute_master/: Cargo.toml  build.rs
distributed_computing/distributed_compute_master/proto/: resource_manager.proto
distributed_computing/distributed_compute_master/src/: main.rs  threat_master.rs
distributed_computing/distributed_compute_master/src/ui/: appwindow.slint
distributed_computing/distributed_compute_worker/: Cargo.toml  build.rs
distributed_computing/distributed_compute_worker/proto/: resource_manager.proto
distributed_computing/distributed_compute_worker/src/: camera_worker.rs  main.rs  threat_worker.rs
