[package]
name = "distributed_compute_worker"
version = "0.1.0"
edition = "2024"

[dependencies]
slint = "1.3" 
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.7", features = ["v4"] } 
serde = { version = "1.0", features = ["derive"] }
tower = "0.5.2" 
anyhow = "1.0" 
tonic = { version = "0.14.2", features = ["transport", "codegen"] }
prost = "0.14.1"
tonic-prost = "0.14.2"

[build-dependencies]
tonic-build = "0.14.2"
tonic-prost-build = "0.14.2"
slint-build = "1.3"