[package]
name = "m4n-camera-worker"
version = "1.0.0"
edition = "2021"

[dependencies]
# CORE ASYNC, ERROR HANDLING, CONFIG
tokio = { version = "1.35", features = ["full", "sync", "time"] }
anyhow = "1.0"
thiserror = "2.0.17"
config = "0.15.19"
toml = "0.9.8"
futures = "0.3"

# gRPC RUNTIME (REQUIRED FOR CLIENT/SERVER)
tonic = { version = "0.14.2", features = ["transport", "codegen"] }
prost = "0.14.1"
tonic-prost = "0.14.2"
# CAMERA & IMAGE
nokhwa = { version = "0.10", features = ["input-native"] }
image = "0.25.9"
imageproc = "0.25"
uuid = { version = "1.7", features = ["v4"] }

# ENCRYPTION / SECURITY
aes-gcm = "0.10"
chacha20poly1305 = "0.10"
argon2 = "0.5"
rand = "0.9.2"
sha2 = "0.10"
base64 = "0.22.1"
rustls = "0.23.35"
rustls-pemfile = "2.2.0"

# SERIALIZATION, TIME, COMPRESSION
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "2.0.1"
chrono = { version = "0.4", features = ["serde"] }
zstd = "0.13"

# NETWORKING (QUIC)
quinn = "0.11.9"

# LOGGING
tracing = "0.1.43"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

# DATABASE
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "sqlite"] }

# --- BUILD-TIME DEPENDENCIES ---
[build-dependencies]
# ONLY tonic-build - removed tonic-prost-build
tonic-build = "0.14.2"
tonic-prost-build = "0.14.2"

[features]
default = ["webcam"]
webcam = []
raspberry-pi = []

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 1
